[gd_scene load_steps=12 format=2]

[ext_resource path="res://backgrounds/black.png" type="Texture" id=1]
[ext_resource path="res://scenes/player.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/game.gd" type="Script" id=3]
[ext_resource path="res://sounds/classic/bangLarge.wav" type="AudioStream" id=4]
[ext_resource path="res://sounds/classic/fire.wav" type="AudioStream" id=5]
[ext_resource path="res://scenes/camera.gd" type="Script" id=6]
[ext_resource path="res://fonts/bit5x3.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://scenes/canvas_layer.gd" type="Script" id=8]
[ext_resource path="res://themes/theme.tres" type="Theme" id=9]
[ext_resource path="res://sounds/classic/bangMedium.wav" type="AudioStream" id=10]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 7 )

[node name="Game" type="Node2D"]
script = ExtResource( 3 )

[node name="canvas_layer" type="CanvasLayer" parent="."]
script = ExtResource( 8 )

[node name="score_label" type="Label" parent="canvas_layer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -512.0
margin_top = 20.0
margin_right = 512.0
margin_bottom = 44.0
grow_horizontal = 2
grow_vertical = 2
rect_pivot_offset = Vector2( 512, 12 )
theme = ExtResource( 9 )
custom_colors/font_color = Color( 0.756863, 0.756863, 0.756863, 1 )
custom_fonts/font = SubResource( 1 )
text = "Score: 0000"
align = 1
valign = 1

[node name="Background" type="Control" parent="."]
margin_left = -20.0
margin_top = -20.0
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_group_": true
}

[node name="Space_Black" type="TextureRect" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1880.0
margin_bottom = 1040.0
texture = ExtResource( 1 )
stretch_mode = 2

[node name="player" parent="." instance=ExtResource( 2 )]
rotation_speed = 3
thrust_strength = 5.0

[node name="laser_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -10.0
pitch_scale = 0.9

[node name="large_explosion_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -5.0

[node name="medium_explosion_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -5.0

[node name="camera" type="Camera2D" parent="."]
offset = Vector2( 512, 300 )
current = true
script = ExtResource( 6 )

[connection signal="area_entered" from="player" to="player" method="_on_player_area_entered"]
[connection signal="player_destroyed" from="player" to="." method="_on_player_player_destroyed"]
